# vocabulary_note_for_engineer

./: package.json
backend/: .eslintrc.js  .gitignore  env.sample  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: firebase.ts  index.ts
backend/src/domain/: account.ts  example.ts  word.ts
backend/src/infra/controller/: search.ts
backend/src/infra/repository/: account.ts  word.ts  (+3 more)
backend/src/middleware/: auth.ts
backend/src/routes/: common.ts  search.ts
backend/src/usecase/: word.ts
chrome-extension/: .eslintrc.json  .gitignore  .nano-staged.json  firebase.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
chrome-extension/src/: firebase.ts  manifest.ts
chrome-extension/src/auth-site/: index.html
chrome-extension/src/authSite/: authSite.html  signInWithPopup.ts
chrome-extension/src/background/: api.ts  auth.ts  index.ts  initApp.ts  offscreen.ts
chrome-extension/src/content/: App.tsx  definition.tsx  index.tsx  search.ts  type.ts  validate.ts
chrome-extension/src/firebase/: index.ts
chrome-extension/src/offscreen/: offscreen.html  offscreen.ts
chrome-extension/src/popup/: auth.tsx  index.tsx  layout.tsx  popup.tsx
chrome-extension/tools/: unstable_mv3ToMv2Build.js
document_crawler/: .gitignore  Makefile  pyproject.toml
document_crawler/document_crawler/: dictionary.py  items.py  middlewares.py  paragraph.py  pipelines.py  settings.py  types.py
document_crawler/document_crawler/spiders/: technical_docs.py
document_crawler/scripts/: aggregate_examples.py  dictionary.py  insert_firestore.py
src/: manifest.ts
