[tool.poetry]
name = "document-crawler"
version = "0.1.0"
description = ""
authors = ["Takumi Maruyama <satouredstone@gmail.com>"]
readme = "README.md"
packages = [{ include = "document_crawler" }]

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.11.1"
spacy = "^3.7.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
ipykernel = "^6.29.3"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nltk.*"
ignore_missing_imports = true
